--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  hive: ^2.2.3
+  cloud_firestore: ^4.8.3
+  firebase_core: ^2.15.0
+  bloc: ^8.1.2
+  get_it: ^7.6.0
+  equatable: ^2.0.5
 
 dev_dependencies:
   flutter_test:
