--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,14 @@
 {
-    "dart.flutterSdkPath": "C:\\dev\\app-mentor\\.fvm\\flutter_sdk"
-}
+    "dart.flutterSdkPath": ".fvm/flutter_sdk",
+    // Remove .fvm files from search
+    "search.exclude": {
+      "**/.fvm": true
+    },
+    // Remove from file watching
+    "files.watcherExclude": {
+      "**/.fvm": true
+    },
+    "dart.flutterSdkPaths": ["/Users/$USER/fvm/versions"]
+
+    
+  }
